# wasm_game_of_life

./: Cargo.toml  LICENSE_MIT  README.md  package-lock.json
benches/: benches.rs
src/: bool_field.rs  cell.rs  color.rs  complex.rs  complex_field.rs  coord.rs  float_field.rs  grid.rs  lib.rs  pixel.rs  quantum.rs  timer.rs
www/: index.html  index.js  package.json
