[package]
name = "quantum-wave"
version = "0.1.0"
description = "Quantum wave vizualisation in WASM"
authors = ["Philippe Cochin <philippe.cochin@gmail.com>"]
license = "MIT"
repository = "https://github.com/sneakyweasel/wasm_game_of_life"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
wasm-bindgen = "0.2"
priority-queue= "1.2.1"
num = "0.4.0"
rand = { version = "*", features = ["wasm-bindgen"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

# [profile.release]
# opt-level = 'z'
# lto = true
